--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -32,12 +32,19 @@ h1, h2, h3, h4, h5, h6,
   padding: 30px 0;
 }
 
+.eb-navbar-active {
+  border-bottom: 1px solid #111;
+  padding: 12px 0;
+  z-index: 980;
+}
+
 .uk-navbar-nav>li>a {
   color: #111;
   background: white;
   font-size: 30px;
   font-family: 'Roboto',sans-serif;
   font-weight: 300;
+  padding: 0 30px;
 }
 
 .uk-navbar-nav>li.uk-active>a,
