--- a/assets/css/colors.css
+++ b/assets/css/colors.css
@@ -7,6 +7,7 @@
   cursor: pointer;
   line-height: 30px;
   display: inline-block;
+  border-radius: 3px;
 }
 
 .button.uk-button-large {
@@ -34,6 +35,15 @@
   background: #abda1e;
 }
 
+.button-transparent {
+  background: transparent;
+}
+
+.border-white {
+  border: 1px solid white;
+}
+
+/* Borders */
 
 .border-red-top {
   border-top: 6px solid #f5261f;
