--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -34,6 +34,7 @@ h1, h2, h3, h4, h5, h6,
 .eb-navbar {
   background: white;
   padding: 30px 0;
+  transform: padding .3s;
 }
 
 .eb-navbar-active {
