--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -59,3 +59,14 @@ h1, h2, h3, h4, h5, h6,
   background: white;
   color: #888;
 }
+
+.uk-icon-button {
+  background: white;
+  border: 1px solid #e3e3e3;
+  border: 1px solid #e3e3e3;
+}
+
+.uk-icon-button:hover{
+  background: white;
+  border: 1px solid #333;
+}
