--- a/assets/css/fonts.css
+++ b/assets/css/fonts.css
@@ -1,7 +1,23 @@
-/* latin */
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 300;
+  src: local('Roboto Light'), local('Roboto-Light'), url(../fonts/roboto-300.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
+}
+
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Roboto'), local('Roboto-Regular'), url(../fonts/roboto-400.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
+}
+
+
 @font-face {
   font-family: 'Krona One';
   font-style: normal;
   font-weight: 400;
-  src: local('Krona One'), local('KronaOne-Regular'), url(../fonts/krona-one.woff2) format('woff2');
+  src: local('Krona One'), local('KronaOne-Regular'), url(../fonts/krona-one-400.woff2) format('woff2');
   uni
